Add external_id to TmsTestCase